[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uq_reconstruction_demo"
version = "0.1.0"
description = "Minimal demo of uncertainty-aware image reconstruction using PyTorch (MC dropout)."
authors = [
    { name = "Souvik Bose", email = "sbose925@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

# runtime dependencies
dependencies = [
    "numpy>=1.22",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/<your-username>/uq_reconstruction_demo"
Repository = "https://github.com/<your-username>/uq_reconstruction_demo"
Issues = "https://github.com/<your-username>/uq_reconstruction_demo/issues"

[tool.setuptools]
packages = ["uq_reconstruction_demo"]

